--- a/front_end/src/IT21041716/scenes/common.css
+++ b/front_end/src/IT21041716/scenes/common.css
@@ -1,9 +1,52 @@
-.cardLanguage {
-    cursor: pointer;
+.main-container{
+    margin-left: 10rem;
+    margin-right: 10rem;
+    margin-bottom: 2rem;
 }
 
-.cardLanguage:hover {
-    background-color: #e0e0e0;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
-    transition: all 0.3s ease;
+.container-heading{
+    height: 3rem;
+    background-color:rgb(236, 236, 236);
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+    padding-left: 1rem;
+    box-shadow: 0px 2px 4px rgba(71, 71, 71, 0.2);
+    transition: box-shadow 0.3s;
+}
+.container-heading h2{
+   color: black;
+   font-size: 20px;
+
+}
+
+.one-line{
+    display: flex;
+    flex-direction: row;
+    padding-left: 5px;
+    margin-top: 1rem;
+}
+.coloum-icon{
+    width: 35px;
+    height: 35px;
+    cursor: pointer;
+}
+.same-line{
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-start;
+    align-items: center;
+}
+.coloum-para{
+    margin-left: 1rem;
+    margin-top: auto;
+    margin-bottom: auto;
+    cursor: pointer;
+
+}
+
+.coloum-para a{
+    text-decoration: none;
+    color: black;
+    font-size: 14px;
 }
