--- a/front_end/src/IT21041716/scenes/common.css
+++ b/front_end/src/IT21041716/scenes/common.css
@@ -96,3 +96,12 @@
     max-height: 120px;
     height: 120px;
 }
+/*language card image size*/
+.centered-cover-image {
+    object-fit: cover;
+    width: 400px;
+    height: 400px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
