--- a/front_end/src/IT21049590/components/UserProfile.css
+++ b/front_end/src/IT21049590/components/UserProfile.css
@@ -1,10 +1,9 @@
-/* UserProfile.css */
 body {
   display: flex;
   align-items: center;
   justify-content: center;
   height: 100vh;
-  margin: 0;
+  margin: 0; /* Remove default body margin */
 }
 
 .user-profile-container {
@@ -19,7 +18,7 @@ body {
 .user-actions {
   display: flex;
   flex-direction: column;
-  margin-top: 20px;
+  margin: auto;
 }
 
 .user-actions a,
@@ -27,4 +26,12 @@ body {
   text-decoration: none;
   margin-bottom: 10px;
   width: 100%;
+}
+
+.profile {
+  height: 400px; /* Adjust the height as needed */
+  width: 400px; /* Adjust the width as needed */
+  border: 3px solid rgb(7, 67, 231);
+  padding: 20px; /* Adjust the padding as needed */
+  margin: auto;
 }
