--- a/front_end/src/IT21049590/components/UserProfile.css
+++ b/front_end/src/IT21049590/components/UserProfile.css
@@ -1,10 +1,10 @@
-body {
+/* body {
   display: flex;
   align-items: center;
   justify-content: center;
   height: 100vh;
-  margin: 0; /* Remove default body margin */
-}
+  margin: 0; 
+} */
 
 .user-profile-container {
   width: 400px;
