--- a/front_end/src/IT21049590/components/UserProfile.css
+++ b/front_end/src/IT21049590/components/UserProfile.css
@@ -7,7 +7,13 @@
 } */
 
 .user-profile-container {
-  width: 400px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 100vh;
+  margin-left: auto; 
+  margin-right: auto;
+  width: 1000px;
   padding: 20px;
   background-color: #ffffff;
   border-radius: 8px;
@@ -29,8 +35,8 @@
 }
 
 .profile {
-  height: 400px; /* Adjust the height as needed */
-  width: 400px; /* Adjust the width as needed */
+  height: 500px; /* Adjust the height as needed */
+  width: 500px; /* Adjust the width as needed */
   border: 3px solid rgb(7, 67, 231);
   padding: 20px; /* Adjust the padding as needed */
   margin: auto;
