--- a/front_end/src/IT21049590/components/UserProfile.css
+++ b/front_end/src/IT21049590/components/UserProfile.css
@@ -19,7 +19,7 @@
   margin-right: auto;
   width: 1000px;
   padding: 20px;
-  background-color: #ffffff;
+  background-color: #0d1313;
   border-radius: 8px;
   box-shadow: 0px 2px 8px rgba(0, 0, 0, 0.15);
   text-align: center;
@@ -42,6 +42,7 @@
   height: 500px; /* Adjust the height as needed */
   width: 500px; /* Adjust the width as needed */
   border: 3px solid rgb(7, 67, 231);
+  background-color: #5d8383;
   padding: 20px; /* Adjust the padding as needed */
   margin: auto;
 }
